# sos

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: sanitize.cmake  sanitizers.cmake  warnings.cmake
include/sos/: sos.hpp
include/sos/check/: check.hpp  checkable.hpp  checked.hpp  failed_check.hpp  is_checked.hpp  policy.hpp
include/sos/concepts/: bool_castable.hpp  boolean_testable.hpp  default_initializable_regular_invocable.hpp  empty_testable.hpp  equality_comparable_with.hpp  exception_object.hpp  has_value_testable.hpp  null.hpp  oneway_equality_comparable_with_null.hpp  oneway_inequality_comparable_with_null.hpp  transparent.hpp  wrappable.hpp
include/sos/constant/detail/: eval.hpp  warning.hpp
include/sos/constraints/: constrained.hpp
include/sos/contracts/: assertion_kind.hpp  contract_violation.hpp  detection_mode.hpp  evaluation_semantic.hpp  handle_contract_violation.hpp  invoke_default_contract_violation_handler.hpp
include/sos/exceptions/: bad_require.hpp
include/sos/policy/: dynamic_policy.hpp  is.hpp  policies.hpp  policy.hpp  static_policy.hpp
include/sos/predicates/: always.hpp  always_false.hpp  always_true.hpp  bool_cast.hpp  constant.hpp  from_predicate.hpp  has_value.hpp  is_empty.hpp  is_equal_to_null.hpp  is_filled.hpp  is_not_equal_to_null.hpp  is_not_null.hpp  is_null.hpp  negation.hpp
include/sos/require/: is_requireable.hpp  require.hpp
include/sos/traits/: is_debug.hpp  is_debug_mode.hpp  is_specialization_of.hpp  make_transparent.hpp  null_instance.hpp  transparent.hpp  view.hpp
scripts/linux/: build.sh  clean.sh  format.sh  generate.sh  test.sh
tests/: CMakeLists.txt  main.cpp
tests/include/: comparable_with.hpp  container.hpp  empty_struct.hpp  testable.hpp
tests/src/check/: check.cpp  checked.cpp  debug_checkable.cpp  is_checked.cpp  policy.cpp  release_checkable.cpp
tests/src/concepts/: bool_castable.cpp  default_initializable_regular_invocable.cpp  empty_testable.cpp  has_value_testable.cpp  oneway_equality_comparable_with_null.cpp  oneway_inequality_comparable_with_null.cpp  transparent.cpp  wrappable.cpp
tests/src/constraints/: constrained.cpp
tests/src/policy/: dynamic_policy.cpp  static_policy.cpp
tests/src/predicates/: always.cpp  always_false.cpp  always_true.cpp  bool_cast.cpp  constant.cpp  has_value.cpp  is_empty.cpp  is_equal_to_null.cpp  is_filled.cpp  is_not_equal_to_null.cpp  is_not_null.cpp  is_null.cpp  negation.cpp
tests/src/require/: is_requireable.debug.cpp  is_requireable.release.cpp  require.cpp
tests/src/traits/: debug_is_debug.cpp  is_debug_mode.debug.cpp  is_debug_mode.release.cpp  make_transparent.cpp  null_instance.cpp  release_is_debug.cpp
